<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">리그베다 뷰어</string>
    <string name="app_name_eng">RigVedaViewer</string>
    <string name="loading_shimmer_text">RigVeda Viewer</string>
    <!-- ////////////////////////////////////////////////////////////////////////////////////////////////////// -->
    <string name="url_blank">about:blank</string>
    <string name="url_random_page">http://rigvedawiki.net/r1/wiki.php/?action=randompage</string>
    <string name="url_home_page">http://rigvedawiki.net/r1/wiki.php</string>
    <string name="url_home_page_with_slash">http://rigvedawiki.net/r1/wiki.php/</string>
    <string name="url_backlink_keyword"> \u003Faction=fullsearch\u0026backlinks=1\u0026value=</string>
    <string name="url_home_page_pds_with_slash">http://rigvedawiki.net/r1/pds/</string>
    <!-- ////////////////////////////////////////////////////////////////////////////////////////////////////// -->
    <string name="foot_note_title">RigVeda Wiki Footnote</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="progress_dialog_message">Loading......</string>
    <string name="backbutton_message">뒤로가기를 한번 더 누르면 앱이 종료됩니다.</string>
    <string name="error_network_not_available">네트워크 연결이 끊어졌습니다.\n연결 상태를 확인 해 주세요.</string>
    <string name="user_agent_galaxy_s2">Mozilla/5.0 (Linux; U; Android 2.3.3; ko-kr; SHW-M250S Build/GINGERBREAD) AppleWebKit/533.1 (KHTML, like Gecko) Version/4.0 Mobile Safari/533.1</string>
    <string name="user_agent_pc">Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/32.0.1700.76 Safari/537.36</string>
    <!-- ////////////////////////////////////////////////////////////////////////////////////////////////////// -->
    <string name="action_settings">Settings</string>
    <string name="menu_optn">설정</string>
    <string name="menu_prev">이전</string>
    <string name="menu_next">다음</string>
    <string name="menu_rand">랜덤</string>
    <string name="loading_footnote">각주를 읽어오는 중입니다.</string>
    <string name="no_footnote">각주가 존재하지 않습니다.</string>
    <!-- ////////////////////////////////////////////////////////////////////////////////////////////////////// -->
    <string name="button_random">랜덤</string>
    <string name="button_reverse_link">역링크</string>
    <string name="button_footnote">각주</string>
    <string name="button_exit">종료</string>
    <string name="option_caption_option">옵션설정</string>
    <string name="option_caption_menu">메뉴설정</string>
    <!-- ////////////////////////////////////////////////////////////////////////////////////////////////////// -->
    <string name="option_clear_cache">리그베다뷰어 인터넷 캐쉬 모두삭제</string>
    <string name="option_clear_cache_complete">리그베다뷰어의 인터넷 캐쉬가 모두삭제되었습니다.</string>
    <string name="option_show_alias">링크드립표시 (링크의 실제 이름과 표시되는 이름이 다른 경우 화면에 표시)</string>
    <string name="option_modify_youtube_iframe_width">유뷰브 동영상의 가로크기를 단말 가로크기에 맞춤</string>
    <string name="option_show_external_image">외부 이미지를 항상 표시하고 숨기지 않음</string>
    <string name="option_show_night_eye_protect">야간 안구 보호기능(페이지 로딩 완료 시 까지 전체화면 어둡게 설정)</string>
    <string name="option_color_caption">색상변경</string>
    <string name="option_color_text">텍스트색상 직접선택</string>
    <string name="option_color_text_button">선택</string>
    <string name="option_color_background">배경색상 직접선택</string>
    <string name="option_color_background_button">선택</string>
    <string name="option_color_link">링크색상 직접선택</string>
    <string name="option_color_link_button">선택</string>
    <string name="option_color_type1">샘플1</string>
    <string name="option_color_type2">샘플2</string>
    <string name="option_color_type3">샘플3</string>
    <string name="option_color_type1_link">링크</string>
    <string name="option_color_type2_link">링크</string>
    <string name="option_color_type3_link">링크</string>
    <string name="option_color_sample_caption">적용결과: </string>
    <string name="option_color_sample">가나다</string>
    <string name="option_color_sample_link">링크</string>
    <string name="option_fontSize_caption">폰트크기 (100\%% ~ 105\%% 추천)</string>
    <string name="option_fontSize_percent">%</string>
    <string name="option_fontSize_up">▲</string>
    <string name="option_fontSize_down">▼</string>
    <string name="option_show_exit">종료 버튼 보이기</string>
    <string name="option_show_prev">이전으로 가기 버튼 보이기</string>
    <string name="option_show_next">다음으로 가기 버튼 보이기</string>
    <string name="option_show_random">랜덤 버튼 보이기</string>
    <string name="option_show_reverse_link">역링크 버튼 보이기</string>
    <string name="option_show_footnote">각주모음 버튼 보이기</string>
    <string name="option_show_menuleft">메뉴를 왼쪽에 표시</string>
    <string name="option_show_menuright">메뉴를 오른쪽에 표시</string>
    <string name="option_about_btn">About</string>
    <string name="option_about_text">\nRigVeda Viewer\n리그베다 뷰어\n\n\nCopyright 2014\n제작자 : Stanley_Kou\n제작자 블로그 : http://stanleykou.tistory.com\n\n이 앱은 리그베다 위키의 허락 하에 개발되었습니다.\n\n리그베다 위키는 예전 엔하 위키의 새로운 이름입니다.\n(현재의 엔하위키는 엔젤하이로설정 위키의 이름으로 쓰이고 있습니다)\n\n리그베다 위키와 관련된 질문이나 문의사항은 리그베다위키 게시판으로 해주시기 바랍니다.\n\nhttp://wikibbs.net/wikibbs\n\n\n</string>
    <string name="option_clipboard_copied">클립보드에 블로그 URL이 복사되었습니다</string>
    <!-- ////////////////////////////////////////////////////////////////////////////////////////////////////// -->
    <string name="dialog_image_title">이미지 URL</string>
    <string name="dialog_image_save">이미지 저장</string>
    <string name="dialog_image_save_complete">이미지가 저장되었습니다</string>
    <string name="dialog_image_url_copy">이미지 URL 복사</string>
    <string name="dialog_image_url_copy_colon">클립보드에 복사:</string>
    <string name="dialog_link_title">Link</string>
    <string name="dialog_link_new_page">Link를 외부 브라우저로 열기</string>
    <string name="dialog_link_copy">Link를 클립보드에 복사</string>
    <string name="dialog_link_url_copy_colon">클립보드에 복사:</string>
    <!-- ////////////////////////////////////////////////////////////////////////////////////////////////////// -->
    <string name="http_stanleykou_tistory_com_">http://stanleykou.tistory.com/</string>

    <!-- ////////////////////////////////////////////////////////////////////////////////////////////////////// -->
    <!-- contents description -->
    <!-- ////////////////////////////////////////////////////////////////////////////////////////////////////// -->
    <string name="color_colorselectview.xml">color_colorselectview.xml</string>
    <string name="color_hexview.xml">color_hexview.xml</string>
    <string name="color_hsvview.xml">color_hsvview.xml</string>
    <string name="color_rgbview.xml">color_rgbview.xml</string>
    <string name="colorview.xml">colorview.xml</string>
    <string name="content_frame.xml">content_frame.xml</string>
    <string name="fragment_list.xml">fragment_list.xml</string>
    <string name="fragment_row.xml">fragment_row.xml</string>
    <string name="fragment_webview.xml">fragment_webview.xml</string>
    <string name="menu_frame.xml">menu_frame.xml</string>
    <string name="option_activity.xml">option_activity.xml</string>
    <string name="slidingmenumain.xml">slidingmenumain.xml</string>
    <string name="splash_activity.xml">splash_activity.xml</string>
    <string name="footnote_scrollview">footnote_scrollview</string>
    <string name="footnote_textview">footnote_textview</string>
    <string name="footnote_close">footnote_close</string>

    <!-- ////////////////////////////////////////////////////////////////////////////////////////////////////// -->
    <!-- devmil-android-color-picker -->
    <!-- ////////////////////////////////////////////////////////////////////////////////////////////////////// -->

    <string name="color_select_color">Select a color</string>
    <string name="color_old_color">Old color</string>
    <string name="color_new_color">New color</string>
    <string name="color_hex_invalid">Invalid color hex code!</string>
    <string name="prefOK">OK</string>

</resources>